issues fixedd
